# exploding-bots

./: Cargo.toml
crates/human-client/: Cargo.toml
crates/human-client/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: card_setup.rs  main.rs  ui.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
