[package]
authors = ["lhvy <cookiecoder15@gmail.com>", "Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "server"
version = "0.1.0"

[dependencies]
anyhow = "1.0.40"
jsonl = "4.0.1"
types = {path = "../types"}
uuid = {version = "0.8.2", features = ["v4"]}
